compiler/testData/diagnostics/tests/evaluate/otherOverflow.kt
import <!PLATFORM_CLASS_MAPPED_TO_KOTLIN!>java.lang.Byte<!> as JByte

val a1 = (JByte.MAX_VALUE + 1).toByte()